[gd_scene load_steps=4 format=2]

[ext_resource path="res://MajorScene.gd" type="Script" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="MajorScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 260, 282 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 549.467, 282.538 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="hp volume" type="Label" parent="Control"]
margin_left = 23.5353
margin_top = 7.61437
margin_right = 63.5353
margin_bottom = 21.6144
text = "HP:"

[node name="hp" type="Label" parent="Control"]
margin_left = 55.0311
margin_top = 8.30659
margin_right = 95.0311
margin_bottom = 22.3066
text = "100 / 100"

[node name="ProgressBar" type="ProgressBar" parent="Control"]
margin_left = 25.2659
margin_top = 25.612
margin_right = 173.266
margin_bottom = 39.612
custom_colors/font_color = Color( 0, 0, 0, 0 )
step = 1.0
value = 100.0
allow_lesser = true

[node name="BoardGameOver" type="ColorRect" parent="Control"]
visible = false
margin_right = 1029.0
margin_bottom = 607.0
color = Color( 0, 0, 0, 0.517647 )

[node name="Label" type="Label" parent="Control/BoardGameOver"]
margin_left = 245.893
margin_top = 240.992
margin_right = 318.893
margin_bottom = 254.992
rect_scale = Vector2( 7.28, 7.28 )
text = "Game Over"
[connection signal="gameOver" from="Player" to="Enemy" method="_on_Player_gameOver"]
[connection signal="gameOver" from="Player" to="." method="_on_Player_gameOver"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
